# rust-web-app

./: .gitignore  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
entity/: Cargo.toml
entity/src/: lib.rs  tasks.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220704_145355_create_tasks_table.rs  m20220716_113001_create_users_table.rs  main.rs
public/: authorization.css  container.css  todo_list.css
src/: lib.rs  main.rs  pool.rs  render_routes.rs  task_routes.rs  user_routes.rs
templates/: base.html.tera  edit_task_form.html.tera  login_page.html.tera  signup_page.html.tera  todo_list.html.tera
