[package]
name = "todo-app-for-article"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
async-trait = { version = "0.1" }
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[dependencies.sea-orm]
version = "^0.8.0"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
  "macros"
]